Refactor ArrayListSample